--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,9 +30,13 @@
 
         <fragment android:name=".MediaProjectionActivity" />
 
-        <activity android:name=".Drobe" />
+        <activity android:name=".Drobe"
+            android:taskAffinity=""
+            android:excludeFromRecents="true"/>
         <activity
             android:name=".Screenshot"
+            android:taskAffinity=""
+            android:excludeFromRecents="true"
             android:theme="@android:style/Theme.Translucent.NoTitleBar" />
         <activity android:name=".Drobe_ImageActivity" />
         <activity android:name=".Drobe_CropAndFilter" />
